objects/FSM_Rel_Cont_to_L__c.object
<CustomObject>
    <description>Field Services program

Schneider or external Contacts related to a Location.
Such as : Facility Manager</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Locations</relationshipLabel>
        <relationshipName>RelatedLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>RelatedContacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning Contact</fullName>
                </value>
                <value>
                    <fullName>Maintenance Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Contact to Location</label>
    <nameField>
        <displayFormat>RelContactLoc-{000000}</displayFormat>
        <label>Related Contact/Location</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts to Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>